search spacing fix & content template

--- a/src/assets/scss/components/archive/_archive-header.scss
+++ b/src/assets/scss/components/archive/_archive-header.scss
@@ -14,7 +14,10 @@
 	.archive-search {
 		background-color: var(--color--grey-light);
 		padding: var(--padding-inner) 0;
+		margin-left: 0;
+		margin-right: 0;
 		max-width: 100%;
+		width: 100%;
 	}
 
 	.search-form {
